<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_log_sets"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    tools:context=".ui.workouttracking.settracker.logsets.LogSetsFragment">

    <TextView
        android:id="@+id/text_view_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_weight"
        android:text="@string/string_weight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
...
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_weight" />

    <ImageView
        android:id="@+id/image_view_reduce_weight"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_minus_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_weight"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_weight"
        app:layout_constraintTop_toTopOf="@+id/edit_text_weight"
        app:tint="?colorPrimary" />

    <ImageView
        android:id="@+id/image_view_add_weight"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_weight"
        app:layout_constraintStart_toEndOf="@+id/edit_text_weight"
...
        app:tint="?colorSecondary" />

    <TextView
        android:id="@+id/text_view_num_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_num_reps"
        android:text="@string/string_reps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_weight" />

    <EditText
...
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_num_reps" />

    <ImageView
        android:id="@+id/image_view_reduce_reps"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_minus_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_num_reps"
        app:layout_constraintEnd_toStartOf="@+id/edit_text_num_reps"
        app:layout_constraintTop_toTopOf="@+id/edit_text_num_reps"
        app:tint="?colorPrimary" />

    <ImageView
        android:id="@+id/image_view_add_reps"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_num_reps"
        app:layout_constraintStart_toEndOf="@+id/edit_text_num_reps"
...
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/edit_text_num_reps">

        <Button
            android:id="@+id/button_clear_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:text="@string/string_clear" />

        <android.widget.Button
            android:id="@+id/button_save_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/button_background"
            android:backgroundTint="?colorSecondary"
            android:text="@string/string_save"
            android:textColor="?colorOnSecondary" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_training_sets"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
