...
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_edit_set_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_edit_set_weight"
        android:text="@string/string_weight"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_edit_set_weight"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_edit_set_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/edit_text_edit_set_reps"
        android:text="@string/string_reps"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_text_edit_set_reps"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_text_edit_set_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints="weight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_edit_set_weight"
        app:layout_constraintTop_toBottomOf="@id/text_view_edit_set" />

...
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/text_view_edit_set_weight"
        app:layout_constraintTop_toBottomOf="@id/edit_text_edit_set_weight" />

    <Button
        android:id="@+id/button_save_edit_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_background"
        android:text="@string/string_save"
        android:textColor="?colorOnSecondary"
...
