...
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/image_view_trophy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/string_trophy"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_height="wrap_content"
        android:text="@string/string_reps"
        android:textAlignment="center"

        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_view_training_set_weight"
        app:layout_constraintEnd_toStartOf="@+id/image_view_training_set_options"
        app:layout_constraintStart_toEndOf="@+id/text_view_training_set_weight" />

    <ImageView
        android:id="@+id/image_view_training_set_options"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
...
